RESOLVED FIXED130706
AX: hit-testing doesn't always work correctly with WK2
https://bugs.webkit.org/show_bug.cgi?id=130706
Summary AX: hit-testing doesn't always work correctly with WK2
chris fleizach
Reported 2014-03-24 17:59:17 PDT
It looks like we should be using screenToRootView to get accurate results
Attachments
patch (2.72 KB, patch)
2014-03-24 18:02 PDT, chris fleizach
no flags
Radar WebKit Bug Importer
Comment 1 2014-03-24 17:59:42 PDT
chris fleizach
Comment 2 2014-03-24 18:02:19 PDT
WebKit Commit Bot
Comment 3 2014-03-24 23:34:57 PDT
Comment on attachment 227713 [details] patch Clearing flags on attachment: 227713 Committed r166224: <http://trac.webkit.org/changeset/166224>
WebKit Commit Bot
Comment 4 2014-03-24 23:35:00 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.