AX: hit-testing doesn't always work correctly with WK2 https://bugs.webkit.org/show_bug.cgi?id=130706

Reviewed by Simon Fraser.

Accessibility code was trying to do screenToRootView itself, and in
some cases with embedded WK2 views that did not work.

* WebProcess/WebPage/mac/WKAccessibilityWebPageObjectMac.mm:
(-[WKAccessibilityWebPageObject accessibilityHitTest:]):


Canonical link: https://commits.webkit.org/148748@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@166224 268f45cc-cd09-0410-ab3c-d52691b4dbfc